Added Clean Original Code PAP

--- a/PAP_Better_Incontext_Sample/test.ipynb
+++ b/PAP_Better_Incontext_Sample/test.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Open AI Key Must be inserted prior to running code \n",
+    "\n",
     "import json\n",
     "import os\n",
     "os.environ[\"OPENAI_API_KEY\"] = \"\""
